--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
     "bytic/cache": "^1.0",
     "bytic/filesystem": "^1.0",
     "bytic/helpers": "^1.0",
-    "bytic/orm": "^1.0"
+    "bytic/orm": "^1.0",
+    "bytic/view": "^1.0"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.0",
