--- a/composer.json
+++ b/composer.json
@@ -20,16 +20,20 @@
     }
   },
   "require": {
-    "php": ">=5.5",
-    "bytic/cache": "^1.0",
-    "bytic/filesystem": "^1.0",
-    "bytic/helpers": "^1.0",
-    "bytic/orm": "^1.0",
+    "php": "^8.0",
+    "bytic/cache": "^1.0|^2.0",
+    "bytic/filesystem": "^1.0|^2.0",
+    "bytic/helpers": "^1.0|^2.0",
+    "bytic/orm": "^1.0|^2.0",
     "bytic/view": "^1.0|^2.0"
   },
   "require-dev": {
-    "squizlabs/php_codesniffer": "^3.0",
-    "phpunit/phpunit": "^7.2",
+    "bytic/phpqatools": "^1.0",
     "mockery/mockery": "^1.1"
+  },
+  "config": {
+    "allow-plugins": {
+      "dealerdirect/phpcodesniffer-composer-installer": true
+    }
   }
 }
